# Project_A

./: .gitignore  Project_A.code-workspace  README.md  idfapp  setup_env.sh
development/: CMakeLists.txt  localization.cpp  localization.h  main.cpp  temp_map.h  wifi_logger.h
development/SA_Simulator/: .gitignore  README_RRT.md  lidar_pygame_sim.py  requirements.txt  rrt_demo.py  rrt_planner.py
development/SA_Simulator/lidar_sim/: README.md  active_localization.py  astar_planner.py  config.py  discrete_noise.py  lidar_pygame_sim.py  localization.py  map_builder.py  map_generator.py  motion_planning.py  rrt_demo.py  rrt_planner.py  sim_robot.py  test_discrete_noise.py
development/components/micromouse_interfaces/include/micromouse_interfaces/: legacy_runtime_port.h  localization_port.h
development/components/micromouse_runtime/: CMakeLists.txt
development/localization/: CMakeLists.txt  partitions.csv  sdkconfig
development/localization/main/: CMakeLists.txt  idf_component.yml  localization.cpp  localization.h  localization_module_adapter.h  main.cpp  temp_map.h  wifi_logger.h
legacy/micromouse-robot-main/: CMakeLists.txt  sdkconfig
legacy/micromouse-robot-main/components/SparkFun_I2C_Mux_Arduino_Library/: CMakeLists.txt
legacy/micromouse-robot-main/components/SparkFun_VL53L1X_Arduino_Library/: CMakeLists.txt
legacy/micromouse-robot-main/components/misc_utils/: CMakeLists.txt
legacy/micromouse-robot-main/main/: CMakeLists.txt  distance_sensor.cpp  main.cpp
tools/: idfwrap.sh
